# pypsa-workshop-202511

./: .buildinfo  .gitignore  .pre-commit-config.yaml  01-pypsa-intro.html  02-pypsa-more-features.html  03-pypsa-sectors-expansion.html  LICENSE  README.md  annex-pandas.html  annex-python.html  config-big-system.html  config-small-system.html  environment.yaml  genindex.html  intro.html  objects.inv  pyproject.toml  pypsa-stochastic.html  requirements.txt  search.html  searchindex.js  slides.html
.github/workflows/: deploy.yml
_sources/: 01-pypsa-intro.ipynb  02-pypsa-more-features.ipynb  03-pypsa-sectors-expansion.ipynb  config-big-system.md  intro.md
pypsa-workshop-202511/: 01-pypsa-intro.ipynb  02-pypsa-more-features.ipynb  03-pypsa-sectors-expansion.ipynb  _config.yml  _toc.yml  annex-pandas.ipynb  annex-python.ipynb  config-small-system.md  intro.md  pypsa-stoch-example.py  pypsa-stochastic.md  slides.md
